@@ -1,6 +1,17 @@
 1.5.6 - 201901xx
 ================
 
+Security:
+- CVE-2018-xxxxx: If Mosquitto is configured to use a password file for
+  authentication, any malformed data in the password file will be treated as
+  valid. This typically means that the malformed data becomes a username and no
+  password. If this occurs, clients can circumvent authentication and get access
+  to the broker by using the malformed username. In particular, a blank line
+  will be treated as a valid empty username. Other security measures are
+  unaffected. Users who have only used the mosquitto_passwd utility to create
+  and modify their password files are unaffected by this vulnerability.
+  Affects version 1.0 to 1.5.5 inclusive.
+
 Broker:
 - Fixed comment handling for config options that have optional arguments.
 - Improved documentation around bridge topic remapping.
